updated site with consolidation

--- a/hireme.html
+++ b/hireme.html
@@ -12,42 +12,44 @@
   </head>
   <body>
     <!--- beginning of top --------->
-    <div class="test-hide">
-      <section id="very-top">
-        <a href="index.html"><i class="ion-home"></i></a>
-        <a href="graphics.html"><p>Graphics</p></a>
-        <a href="hireme.html"><p style="color: red;">Hire Me</p></a>
-      </section>
-    </div>
-    <section id="about-body">
-        <span class="ion-navicon-round"></span>
-        <div class="who-i-am">
-          <div class="portrait-info">
-            <img src="assets/portrait.jpg"></img>
-            <h3>Justin Lattimore</h3>
-            <h3>Web Developer</h3>
-          </div>
-          <div class="hireme-main">
-            <h3>
-              Got Dev?
-            </h3>
-            <p>
-              I'm an aspiring Web Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
-            </p>
-            <p>
-              I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to <a href="mailto:jlattimoreweb@gmail.com">jlattimoreweb@gmail.com</a> to discuss it further?
-            </p>
-          </div>
-          <div class="resume-contain">
-            <iframe class="resume" src="https://resume.creddle.io/embed/a1lidyjttgc" width="854" height="1104" seamless></iframe>
-            <!--  Old resume
-              <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
-            -->
-          </div>
+    <section>
+      <div class="test-hide">
+        <section id="very-top">
+          <a href="index.html"><i class="ion-home"></i></a>
+          <a href="graphics.html"><p>Graphics</p></a>
+          <a href="hireme.html"><p style="color: red;">Hire Me</p></a>
+        </section>
       </div>
-    </section>
-    <section id="more-info">
-        <!-- Javascript handled in 'main.js' -->
+      <section id="about-body">
+          <span class="ion-navicon-round"></span>
+          <div class="who-i-am">
+            <div class="portrait-info">
+              <img src="assets/portrait.jpg"></img>
+              <h3>Justin Lattimore</h3>
+              <h3>Web Developer</h3>
+            </div>
+            <div class="hireme-main">
+              <h3>
+                Got Dev?
+              </h3>
+              <p>
+                I'm an aspiring Web Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
+              </p>
+              <p>
+                I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to <a href="mailto:jlattimoreweb@gmail.com">jlattimoreweb@gmail.com</a> to discuss it further?
+              </p>
+            </div>
+            <div class="resume-contain">
+              <iframe class="resume" src="https://resume.creddle.io/embed/a1lidyjttgc" width="854" height="1104" seamless></iframe>
+              <!--  Old resume
+                <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+              -->
+            </div>
+        </div>
+      </section>
+      <section id="more-info">
+          <!-- Javascript handled in 'main.js' -->
+      </section>
     </section>
     <script src="scripts/project_fixtures.js"></script>
     <script src="scripts/main.js"></script>
