--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/hireme.css">
+      <link rel="stylesheet" type="text/css" href="styles/graphics.css">
+
     </head>
     <body>
       <!--- beginning of top --------->
@@ -20,58 +23,57 @@
       </div>
       <!--- bottom ----->
       <section id="about-body">
-          <span class="ion-navicon-round"></span>
-          <div class="job-title">
-              <img src="assets/justin-close-alt.jpg">
-              <h2>Web Developer</h2>
-              <h3>Justin Lattimore</h3>
+        <div class="job-title">
+            <img src="assets/justin-close-alt.jpg">
+            <h2>Web Developer</h2>
+            <h3>Justin Lattimore</h3>
+        </div>
+        <div class="job-summary">
+            <p>
+                Hi, I'm a Web Developer with a 3D and Graphic Design background. I am willing to relocate anywhere with my own resources. I'm well versed in HTML, CSS, ReactJS, Rails and Node.
+            </p>
+            <p>
+                Please feel free to look through my website.
+            </p>
+        </div>
+        <div class="link-logos">
+          <div class="link-block">
+            <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
+                <i class="ion-social-linkedin-outline"></i>
+                <p>LinkedIn</p>
+            </a>
           </div>
-          <div class="job-summary">
-              <p>
-                  Hi, I'm a Web Developer with a 3D and Graphic Design background. I am willing to relocate anywhere with my own resources. I'm well versed in HTML, CSS, ReactJS, Rails and Node.
-              </p>
-              <p>
-                  Please feel free to look through my website.
-              </p>
+          <div class="link-block">
+            <a href="https://github.com/Wyzardsleeves" target="_blank">
+                <i class="ion-social-github"></i>
+                <p>Github</p>
+            </a>
           </div>
-          <div class="link-logos">
-            <div class="link-block">
-              <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
-                  <i class="ion-social-linkedin-outline"></i>
-                  <p>LinkedIn</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="https://github.com/Wyzardsleeves" target="_blank">
-                  <i class="ion-social-github"></i>
-                  <p>Github</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="https://twitter.com/JustintheDev1" target="_blank">
-                  <i class="ion-social-twitter"></i>
-                  <p>Twitter</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="https://www.instagram.com/justinlattimore/" target="_blank">
-                  <i class="ion-social-instagram-outline"></i>
-                  <p>Instagram</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
-                  <i class="ion-social-codepen-outline"></i>
-                  <p>CodePen</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="https://steemit.com/@justinthedev" target="_blank">
-                  <i class="ion-android-people"></i>
-                  <p>Steemit Blog</p>
-              </a>
-            </div>
+          <div class="link-block">
+            <a href="https://twitter.com/JustintheDev1" target="_blank">
+                <i class="ion-social-twitter"></i>
+                <p>Twitter</p>
+            </a>
           </div>
+          <div class="link-block">
+            <a href="https://www.instagram.com/justinlattimore/" target="_blank">
+                <i class="ion-social-instagram-outline"></i>
+                <p>Instagram</p>
+            </a>
+          </div>
+          <div class="link-block">
+            <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
+                <i class="ion-social-codepen-outline"></i>
+                <p>CodePen</p>
+            </a>
+          </div>
+          <a href="https://steemit.com/@justinthedev" target="_blank">
+            <div class="link-block">
+              <i class="ion-android-people"></i>
+              <p>Steemit Blog</p>
+            </div>
+          </a>
+        </div>
       </section>
       <section id="project-body">
           <div class="project-summary">
@@ -84,7 +86,7 @@
                 My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
               </p>
               <p>
-                I look forward to learning new technologies!
+                I look forward to using new technologies!
               </p>
             </div>
           </div>
@@ -93,7 +95,31 @@
           </div>
         </div>
       </section>
+      <section id="graphics-body">
+          <div class="graphics-heading">
+            <h2>Motion Graphics</div>
+          </div>
+          <div class="vid">
+            <iframe src="https://www.youtube.com/embed/sUuJhe3MXjc" frameborder="0" allowfullscreen></iframe>
+          </div>
+      </section>
+      <section id="hireme-body">
+        <div class="who-i-am">
+          <div class="hireme-main">
+            <h3>
+              Got Dev?
+            </h3>
+            <p>
+              I work primarily with React.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to <a href="mailto:jlattimoreweb@gmail.com">jlattimoreweb@gmail.com</a> to discuss it further?
+            </p>
+          </div>
+          <div class="resume-contain">
+            <iframe class="resume" src="https://resume.creddle.io/embed/a1lidyjttgc" width="854" height="1104" seamless></iframe>
+          </div>
+        </div>
+      </section>
       <section class="right-side">
+        <span class="ion-navicon-round"></span>
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
         </section>
